# mastering-game-animations

./: .gitignore  README.md
02_vulkan_assimp_dynamic_rendering/: CMakeLists.txt  README.md  imgui.ini
02_vulkan_assimp_dynamic_rendering/vulkan/: SkinningPipeline.cpp  UserInterface.cpp  VkRenderData.h  VkRenderer.cpp
04_vulkan_assimp_dynamic_deferred/: CMakeLists.txt  README.md  imgui.ini
04_vulkan_assimp_dynamic_deferred/shader/: assimp.frag  assimp_skinning.frag
04_vulkan_assimp_dynamic_deferred/vulkan/: CompositePipeline.cpp  FramebufferAttachment.cpp  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  SkinningPipeline.cpp  SyncObjects.cpp  UserInterface.cpp  VkRenderData.h  VkRenderer.cpp  VkRenderer.h
04_vulkan_assimp_dynamic_deferred/window/: Window.cpp
06_vulkan_ideas_dynamic_deferred/: README.md  imgui.ini
06_vulkan_ideas_dynamic_deferred/model/: AssimpLevel.cpp  AssimpModel.cpp
06_vulkan_ideas_dynamic_deferred/shader/: assimp.frag  assimp.vert  assimp_level.vert  assimp_selection.frag  assimp_selection.vert  assimp_skinning.vert  assimp_skinning_morph.vert  assimp_skinning_morph_selection.vert  assimp_skinning_selection.vert  composite.frag
06_vulkan_ideas_dynamic_deferred/vulkan/: CompositePipeline.cpp  FramebufferAttachment.cpp  GroundMeshPipeline.cpp  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  SkinningPipeline.cpp  SyncObjects.cpp  UserInterface.cpp  VertexBuffer.cpp  VkRenderData.h  VkRenderer.cpp  VkRenderer.h
08_vulkan_ideas_grid_shader/: .cproject  .project  CMakeLists.txt  Main.cpp  README.md  imgui.ini
08_vulkan_ideas_grid_shader/shader/: assimp.vert  assimp_level.vert  assimp_selection.vert  assimp_skinning.frag  assimp_skinning.vert  assimp_skinning_morph.vert  assimp_skinning_morph_selection.frag  assimp_skinning_morph_selection.vert  assimp_skinning_selection.vert  composite.frag  composite.vert  grid.frag  grid.vert  skybox.frag  skybox.vert
08_vulkan_ideas_grid_shader/tools/: YamlParser.h
08_vulkan_ideas_grid_shader/vulkan/: CompositePipeline.cpp  CompositePipeline.h  FramebufferAttachment.cpp  FramebufferAttachment.h  GridLinePipeline.cpp  GridLinePipeline.h  GroundMeshPipeline.cpp  GroundMeshPipeline.h  LinePipeline.cpp  LinePipeline.h  SkinningPipeline.cpp  SkinningPipeline.h  SkyboxPipeline.cpp  SkyboxPipeline.h  SyncObjects.cpp  UserInterface.cpp  UserInterface.h  VertexBuffer.cpp  VertexBuffer.h  VkRenderData.h  VkRenderer.cpp  VkRenderer.h
08_vulkan_ideas_grid_shader/window/: Window.cpp
10_vulkan_ideas_ssao/: .cproject  .project  CMakeLists.txt  Main.cpp  README.md  imgui.ini
10_vulkan_ideas_ssao/config/: conf.acfg
10_vulkan_ideas_ssao/graphnodes/: ActionNode.cpp  DebugLogNode.cpp  EventNode.cpp  FaceAnimNode.cpp  GraphEditor.cpp  (+16 more)
12_vulkan_ideas_light_shadow/: .cproject  .project  Main.cpp  README.md  imgui.ini
14_vulkan_ideas_multiview/: .cproject  .project  CMakeLists.txt  Main.cpp  README.md  imgui.ini
16_vulkan_ideas_openxr/: .cproject  .project  CMakeLists.txt  Main.cpp  README.md  imgui.ini  run_monado.bat  run_monado.sh
16_vulkan_ideas_openxr/android/: gradle.properties  settings.gradle.kts
16_vulkan_ideas_openxr/android/app/: build.gradle.kts
16_vulkan_ideas_openxr/assets/man/: Man.gltf
16_vulkan_ideas_openxr/assets/vr-controller/: License.txt  controller-box.glb
16_vulkan_ideas_openxr/assets/woman/: Woman.gltf
16_vulkan_ideas_openxr/config/: conf.acfg  level5.acfg
16_vulkan_ideas_openxr/graphnodes/: EventNode.h  RandomNavigationNode.h  SequenceNode.cpp  WaitNode.h
16_vulkan_ideas_openxr/model/: AssimpBone.cpp  AssimpDynLight.cpp  AssimpDynLight.h  AssimpInstance.h  AssimpLevel.cpp  AssimpLevel.h  AssimpModel.cpp  AssimpModel.h  AssimpSettingsContainer.cpp  AssimpSettingsContainer.h  AssimpVRController.cpp  AssimpVRController.h  BehaviorData.h  BehaviorManager.cpp  ScaleArrowsModel.cpp  SimpleSphereModel.h  SingleInstanceBehavior.cpp
16_vulkan_ideas_openxr/octree/: TriangleOctree.h
16_vulkan_ideas_openxr/platform/: AndroidMain.cpp  AssetPaths.cpp  Platform.h
16_vulkan_ideas_openxr/shader/: assimp.vert  assimp_groundmesh.frag  assimp_groundmesh.vert  assimp_level.frag  assimp_level.vert  assimp_post_composite.vert  assimp_post_composite_selection.frag  assimp_post_composite_selection.vert  assimp_selection.vert  assimp_skinning.frag  assimp_skinning.vert  assimp_skinning_morph.vert  assimp_skinning_morph_selection.frag  assimp_skinning_morph_selection.vert  assimp_skinning_selection.frag  assimp_skinning_selection.vert  composite.frag  grid.frag  grid.vert  light_sphere.frag  light_sphere_shadow.frag  light_sphere_shadow.vert  line.vert  line_sphere.vert  shadowmap_assimp.vert  shadowmap_assimp_level.vert  shadowmap_assimp_skinning.vert  shadowmap_assimp_skinning_morph.vert  shadowmap_vr_controller.vert  skybox.frag  skybox.vert  ssao.frag  ssao.vert  ssao_blur.frag  swapchain_copy.frag  vr_controller.vert  vr_vis_mask.frag  vr_vis_mask.vert  xr_swapchain_copy.frag  xr_swapchain_copy.vert  (+1 more)
16_vulkan_ideas_openxr/tools/: Camera.cpp  Camera.h  CameraSettings.h  Logger.cpp  Logger.h  PathFinder.cpp  Timer.cpp  YamlParser.cpp  YamlParserTypes.h
16_vulkan_ideas_openxr/vr/: VRHeadset.cpp  VRHeadset.h
16_vulkan_ideas_openxr/vulkan/: Callbacks.h  CompositePipeline.cpp  CompositePipeline.h  ComputePipeline.cpp  CopyPipeline.cpp  CopyPipeline.h  DynamicShadowMapPipeline.cpp  DynamicShadowMapPipeline.h  Enums.h  GridLinePipeline.cpp  GridLinePipeline.h  Image.h  IndexBuffer.cpp  IndexBuffer.h  LightSpherePipeline.cpp  LinePipeline.cpp  ModelInstanceCamCallbacks.h  ModelInstanceCamData.h  ModelLevelPipeline.cpp  ModelLevelPipeline.h  PostCompositeObjectPipeline.cpp  SSAOPipeline.cpp  SSAOPipeline.h  Shader.cpp  Shader.h  ShaderStorageBuffer.h  ShadowMapPipeline.cpp  SimpleVertexMeshPipeline.cpp  SimpleVertexMeshPipeline.h  SkyboxPipeline.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  UserInterface.cpp  UserInterface.h  UserInterface_android.cpp  VkHelper.cpp  VkHelper.h  VkRenderData.h  VkRenderer.cpp  (+3 more)
16_vulkan_ideas_openxr/window/: AppWindow.cpp  AppWindow.h  Window.cpp  Window.h
(+297 files in other folders)
